Fix blog front-matter to resolve Docusaurus build error

--- a/my-website/blog/2021-08-01-mdx-blog-post.mdx
+++ b/my-website/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,8 +1,11 @@
 ---
-slug: mdx-blog-post
+slug: /blog/mdx-blog-post
 title: MDX Blog Post
-authors: [slorber]
+authors:
+  - slorber
 tags: [docusaurus]
+date: 2021-08-01
+description: Blog posts support Docusaurus Markdown features, such as MDX
 ---
 
 Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
@@ -13,7 +16,7 @@ Use the power of React to create interactive blog posts.
 
 :::
 
-{/* truncate */}
+<!-- truncate -->
 
 For example, use JSX to create an interactive button:
 
